Source/WebCore/PAL/pal/spi/cf/CoreAudioSPI.h
@@ -33,6 +33,12 @@
 
 #if PLATFORM(MAC)
 #include <CoreAudio/AudioHardware.h>
+
+CF_ENUM(AudioObjectPropertySelector)
+{
+    kAudioDevicePropertyTapEnabled = 'tapd',
+};
+
 #else
 
 WTF_EXTERN_C_BEGIN
@@ -55,7 +61,8 @@ CF_ENUM(AudioObjectPropertyScope)
 
 CF_ENUM(AudioObjectPropertySelector)
 {
-    kAudioHardwarePropertyDefaultInputDevice = 'dIn '
+    kAudioHardwarePropertyDefaultInputDevice = 'dIn ',
+    kAudioDevicePropertyTapEnabled = 'tapd',
 };
 
 CF_ENUM(int)
