Source/WebCore/platform/mediastream/mac/CoreAudioCaptureDeviceManager.h
@@ -52,7 +52,6 @@ private:
     CoreAudioCaptureDeviceManager() = default;
     ~CoreAudioCaptureDeviceManager() = default;
     
-    static OSStatus devicesChanged(AudioObjectID, UInt32, const AudioObjectPropertyAddress*, void*);
     Vector<CoreAudioCaptureDevice>& coreAudioCaptureDevices();
 
     enum NotifyIfDevicesHaveChanged { Notify, DoNotNotify };
@@ -60,6 +59,8 @@ private:
 
     Vector<CaptureDevice> m_devices;
     Vector<CoreAudioCaptureDevice> m_coreAudioCaptureDevices;
+
+    AudioObjectPropertyListenerBlock m_listenerBlock;
 };
 
 } // namespace WebCore
